test(dq): use SequencedCollection getLast on the sorted TCRS timeline